islb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: islb
  name: islb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: islb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ionnet: "true"
        io.kompose.service: islb
    spec:
      containers:
        - image: pionwebrtc/ion:latest-islb
          name: islb
          resources: {}
          volumeMounts:
            - mountPath: /configs/islb.toml
              name: islb-claim0
              subPath: islb.toml
      restartPolicy: Always
      volumes:
        - name: islb-claim0
          configMap:
            name: islb-config
#          persistentVolumeClaim:
#            claimName: islb-claim0
status: {}
