nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nats
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/ionnet: "true"
        io.kompose.service: nats
    spec:
      containers:
        - image: nats
          name: nats
          ports:
            - containerPort: 4222
          resources: {}
      restartPolicy: Always
status: {}
