sfu-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sfu
  name: sfu
spec:
  ports:
    - name: "5000"
      port: 5000
      protocol: UDP
      targetPort: 5000
    - name: "3478"
      port: 3478
      targetPort: 3478
  selector:
    io.kompose.service: sfu
status:
  loadBalancer: {}
