signal-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: signal
  name: signal
spec:
  ports:
    - name: "5551"
      port: 5551
      targetPort: 5551
  selector:
    io.kompose.service: signal
status:
  loadBalancer: {}
