ionnet-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ionnet
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ionnet: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ionnet: "true"
